--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,3 +1,6 @@
 .projects-row {
 	margin-bottom: 2em;
 }
+.projects-button {
+	margin-bottom: 2em;
+}
