--- a/_sass/_skills.scss
+++ b/_sass/_skills.scss
@@ -1,5 +1,4 @@
 .skills-row {
-	margin-top: 2em;
 }
 .skill-title {
 	margin-bottom: 1em;
