--- a/css/main.scss
+++ b/css/main.scss
@@ -2,10 +2,14 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
 @import "base";
 @import "navbar";
 @import "header";
 @import "skills";
 @import "profile";
 @import "projects";
+
+a:link, a:active, a:visited, a:hover, a:focus {
+	outline: none;
+	text-decoration: none;
+}
